Integrate Bower with rails asset pipeline; Create generic page controller; Stub homepage

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Vagrant</title>
+    <title>TalkDuel</title>
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
 
