Use libsass to compile SASS stylesheets; Add bootstrap, compass, font-awesome

--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -1,5 +1,5 @@
 <div style="padding: 20px;">
 	<div class="alert alert-warning">
-		<p>Coming soon.</p>
+		<p><i class="fa fa-info-circle"></i> Coming soon.</p>
 	</div>
 </div>
