--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -3,3 +3,26 @@
 		<p><i class="fa fa-info-circle"></i> Coming soon.</p>
 	</div>
 </div>
+
+<div id="candy">
+</div>
+
+<script type="text/javascript">
+	$(document).ready(function() {
+		Candy.init('ws://chat.talkduel.com:5280/websocket', {
+			core: {
+				// only set this to true if developing / debugging errors
+				debug: true,
+				// autojoin is a *required* parameter if you don't have a plugin (e.g. roomPanel) for it
+				//   true
+				//     -> fetch info from server (NOTE: does only work with openfire server)
+				//   ['test@conference.example.com']
+				//     -> array of rooms to join after connecting
+				autojoin: ['TalkDuel@conference.chat.talkduel.com']
+			},
+			view: { assets: '/chat-client/' }
+		});
+
+		Candy.Core.connect('chat.talkduel.com');
+	});
+</script>
